scripts/cn1playground/common/src/main/css/theme.css
/** Define Theme Constants here */
#Constants {
    includeNativeBool: true;
    defaultSourceDPIInt: "0";
}

/** Style for Button class */
Button {
    font-family: "native:MainLight";
    font-size: 3mm;
}

/** Style for App Title Bar Text */
Title {
    font-family: "native:MainLight";
    font-size: 6mm;
}

/** Style for Dialog body */
DialogBody {
    font-family: "native:MainLight";
    font-size: 2.8mm;
}

/** Style for Dialog title bar text */
DialogTitle {
    font-family: "native:MainLight";
    font-size: 4.5mm;
}

/** Style for the side menu */
SideNavigationPanel {
    background: white;
    padding: 2mm 1mm 1mm 1mm;
}

@media platform-ios {
    /** iOS Only styles for side menu. */
    SideNavigationPanel {
        /** Extra top padding to deal with notch on iPhoneX */
        padding: 6mm 1mm 1mm 1mm;
    }
}

/** Style for commands in side menu. */
SideCommand {
    padding: 1mm;
    border: none;
    text-decoration: none;
    color: black;
    font-family: "native:MainLight";
    font-size: 4mm;
    border-bottom: 2px solid #cccccc;
}

